// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Is required 1`] = `
Array [
  .c1 {
  color: rgb(0,0,0);
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.0166em;
  -moz-letter-spacing: 0.0166em;
  -ms-letter-spacing: 0.0166em;
  letter-spacing: 0.0166em;
  line-height: 1.1666;
  margin: 0;
}

input + .c1 {
  margin-left: 0.5rem;
}

.c0 {
  margin: 0 0 1.5rem;
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: rgb(217,221,226);
}

.c0:focus {
  border-color: rgb(0,128,165);
}

.c2 {
  background: rgb(255,255,255);
  border: 1px solid rgb(217,221,226);
  border-radius: 0.25rem;
  box-shadow: none;
  box-sizing: border-box;
  color: rgb(0,0,0);
  font-family: inherit;
  font-size: calc(1rem - 2px);
  margin: 0;
  outline: none;
  padding: 0.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-down'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
  background-position: right 0.75rem center;
  background-repeat: no-repeat;
  background-size: 0.75rem;
  position: relative;
}

.c2::-webkit-input-placeholder {
  color: rgb(99,114,130);
}

.c2::-moz-placeholder {
  color: rgb(99,114,130);
}

.c2:-ms-input-placeholder {
  color: rgb(99,114,130);
}

.c2::placeholder {
  color: rgb(99,114,130);
}

.c2:disabled {
  background-color: rgb(242,243,249);
  border-color: rgb(217,221,226);
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder {
  color: rgb(156,167,180);
}

.c2:disabled,
.c2:disabled::-moz-placeholder {
  color: rgb(156,167,180);
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder {
  color: rgb(156,167,180);
}

.c2:disabled,
.c2:disabled::placeholder {
  color: rgb(156,167,180);
}

.c2:focus {
  border-color: rgb(54,71,127);
}

label + .c2 {
  display: block;
  margin-top: 0.5rem;
  width: 100%;
}

<div
    className="c0"
  >
    <label
      className="c1"
    >
      Choose your province or territory
    </label>
    <select
      className="c2"
      onChange={[Function]}
      required={true}
    >
      <option
        value=""
      >
        -
      </option>
      <option
        value="on"
      >
        Ontario
      </option>
      <option
        value="qc"
      >
        Quebec
      </option>
      <option
        value="bc"
      >
        British Columbia
      </option>
      <option
        value="ab"
      >
        Alberta
      </option>
      <option
        value="mb"
      >
        Manitoba
      </option>
      <option
        value="sk"
      >
        Saskatchewan
      </option>
      <option
        value="ns"
      >
        Nova Scotia
      </option>
      <option
        value="nb"
      >
        New Brunswick
      </option>
      <option
        value="nl"
      >
        Newfoundland and Labrador
      </option>
      <option
        value="pe"
      >
        Prince Edward Island
      </option>
      <option
        value="nt"
      >
        Northwest Territories
      </option>
      <option
        value="nu"
      >
        Nunavut
      </option>
      <option
        value="yt"
      >
        Yukon
      </option>
    </select>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    checked={false}
    className="c0"
    name="undefined_skip"
    onChange={[Function]}
    type="radio"
    value="skip"
  />,
  .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgb(255,255,255);
  border: 1px solid rgb(217,221,226);
  border-radius: 0.5rem;
  box-sizing: border-box;
  color: rgb(87,102,110);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 3rem;
  padding: 1rem;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c0:hover {
  background: rgb(217,221,226);
  border-color: rgb(217,221,226);
}

input[type="checkbox"]:checked + .c0,
input[type="radio"]:checked + .c0 {
  background: rgb(0,128,165);
  border-color: rgb(0,128,165);
  color: rgb(255,255,255);
}

input[type="checkbox"]:focus + .c0,
input[type="radio"]:focus + .c0 {
  border-color: rgb(0,128,165);
}

input[type="checkbox"]:disabled + .c0,
input[type="radio"]:disabled + .c0 {
  background: rgb(241,242,242);
  border-color: rgb(217,221,226);
  color: rgb(156,167,180);
  cursor: auto;
}

.c0 b {
  font-size: 1.5rem;
  font-weight: 400;
}

.c0 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    className="c0"
  >
    Skip this question
  </label>,
]
`;

exports[`Select Matches the snapshot 1`] = `
Array [
  .c1 {
  color: rgb(0,0,0);
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.0166em;
  -moz-letter-spacing: 0.0166em;
  -ms-letter-spacing: 0.0166em;
  letter-spacing: 0.0166em;
  line-height: 1.1666;
  margin: 0;
}

input + .c1 {
  margin-left: 0.5rem;
}

.c0 {
  margin: 0 0 1.5rem;
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: rgb(217,221,226);
}

.c0:focus {
  border-color: rgb(0,128,165);
}

.c2 {
  background: rgb(255,255,255);
  border: 1px solid rgb(217,221,226);
  border-radius: 0.25rem;
  box-shadow: none;
  box-sizing: border-box;
  color: rgb(0,0,0);
  font-family: inherit;
  font-size: calc(1rem - 2px);
  margin: 0;
  outline: none;
  padding: 0.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-down'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
  background-position: right 0.75rem center;
  background-repeat: no-repeat;
  background-size: 0.75rem;
  position: relative;
}

.c2::-webkit-input-placeholder {
  color: rgb(99,114,130);
}

.c2::-moz-placeholder {
  color: rgb(99,114,130);
}

.c2:-ms-input-placeholder {
  color: rgb(99,114,130);
}

.c2::placeholder {
  color: rgb(99,114,130);
}

.c2:disabled {
  background-color: rgb(242,243,249);
  border-color: rgb(217,221,226);
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder {
  color: rgb(156,167,180);
}

.c2:disabled,
.c2:disabled::-moz-placeholder {
  color: rgb(156,167,180);
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder {
  color: rgb(156,167,180);
}

.c2:disabled,
.c2:disabled::placeholder {
  color: rgb(156,167,180);
}

.c2:focus {
  border-color: rgb(54,71,127);
}

label + .c2 {
  display: block;
  margin-top: 0.5rem;
  width: 100%;
}

<div
    className="c0"
  >
    <label
      className="c1"
    >
      Choose your province or territory
    </label>
    <select
      className="c2"
      onChange={[Function]}
    >
      <option
        value=""
      >
        -
      </option>
      <option
        value="on"
      >
        Ontario
      </option>
      <option
        value="qc"
      >
        Quebec
      </option>
      <option
        value="bc"
      >
        British Columbia
      </option>
      <option
        value="ab"
      >
        Alberta
      </option>
      <option
        value="mb"
      >
        Manitoba
      </option>
      <option
        value="sk"
      >
        Saskatchewan
      </option>
      <option
        value="ns"
      >
        Nova Scotia
      </option>
      <option
        value="nb"
      >
        New Brunswick
      </option>
      <option
        value="nl"
      >
        Newfoundland and Labrador
      </option>
      <option
        value="pe"
      >
        Prince Edward Island
      </option>
      <option
        value="nt"
      >
        Northwest Territories
      </option>
      <option
        value="nu"
      >
        Nunavut
      </option>
      <option
        value="yt"
      >
        Yukon
      </option>
    </select>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    checked={false}
    className="c0"
    name="undefined_skip"
    onChange={[Function]}
    type="radio"
    value="skip"
  />,
  .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgb(255,255,255);
  border: 1px solid rgb(217,221,226);
  border-radius: 0.5rem;
  box-sizing: border-box;
  color: rgb(87,102,110);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 3rem;
  padding: 1rem;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c0:hover {
  background: rgb(217,221,226);
  border-color: rgb(217,221,226);
}

input[type="checkbox"]:checked + .c0,
input[type="radio"]:checked + .c0 {
  background: rgb(0,128,165);
  border-color: rgb(0,128,165);
  color: rgb(255,255,255);
}

input[type="checkbox"]:focus + .c0,
input[type="radio"]:focus + .c0 {
  border-color: rgb(0,128,165);
}

input[type="checkbox"]:disabled + .c0,
input[type="radio"]:disabled + .c0 {
  background: rgb(241,242,242);
  border-color: rgb(217,221,226);
  color: rgb(156,167,180);
  cursor: auto;
}

.c0 b {
  font-size: 1.5rem;
  font-weight: 400;
}

.c0 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    className="c0"
  >
    Skip this question
  </label>,
]
`;
